update index file

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <!-- Display the poster image -->
-        <img src="{{ url_for('static', filename='poster.jpg') }}" alt="Mic Masters Camp Poster" class="poster">
+        <img src="poster.jpg" alt="Mic Masters Camp Poster" class="poster">
 
         <h3>Sessions: 1 PM - 4 PM</h3>
         <p><strong>Batch 1:</strong> August 4th - 8th</p>
@@ -52,9 +52,11 @@
         <p>Mentors are experienced in teaching communication, including the National Spelling Bee, Debate, and DECA.</p>
         <p>Fun & Supportive Environment!</p>
 
-<h3>Register Now!</h3>
-<p>Fill out the Google Form to register:</p>
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSfEh3EqQp4Agt6ZkyywXVq7BMSpn1j7SffBp8qvPVnB7OAMsA/viewform?pli=1" target="_blank" class="btn btn-primary">Registration Form</a>        <footer>
+        <h3>Register Now!</h3>
+        <p>Fill out the Google Form to register:</p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfEh3EqQp4Agt6ZkyywXVq7BMSpn1j7SffBp8qvPVnB7OAMsA/viewform?pli=1" target="_blank" class="btn btn-primary">Registration Form</a>
+
+        <footer>
             <p>Location: 2820 Mustang Dr, Herndon, VA, 20171</p>
             <p>Email: micmastershq@gmail.com</p>
         </footer>
