--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
 
         <!-- Display the poster image -->
         <!-- <img src="poster.jpg" alt="Mic Masters Camp Poster" class="poster"> -->
-        <img src="static/poster.jpg" alt="Mic Masters Camp Poster" class="poster">
+        <img src="poster.jpg" alt="Mic Masters Camp Poster" class="poster">
         <h3>Sessions: 1 PM - 4 PM</h3>
         <p><strong>Batch 1:</strong> August 4th - 8th</p>
         <p><strong>Batch 2:</strong> August 11th - 15th</p>
